# BlackPearl-Rendering-Engine

./: .gitattributes  .gitignore  BlackPearl架构图.drawio  CompileShader.bat  CompileVkShader.bat  GenerateProject.bat  README.md  README.txt  index-1.html  premake5.lua  settings.gradle.kts
app/src/main/cpp/: .gitattributes  .gitignore  BlackPearl.vcxproj  BlackPearl.vcxproj.filters  BlackPearl架构图.drawio  CMakeLists.txt  Documents.txt  GenerateProject-Andriod.bat  GenerateProject.bat  README.md  cpp.hint  premake5.lua
app/src/main/cpp/.VSCodeCounter/2022-11-01_16-19-50/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/src/main/cpp/.VSCodeCounter/2022-11-09_11-53-44/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/src/main/cpp/BlackPearl/: CMakeLists.txt  premake5.lua
app/src/main/cpp/BlackPearl/assets/shaders/: shaders.cfg
app/src/main/cpp/BlackPearl/src/: BlackPearl.h  pch.h
app/src/main/cpp/BlackPearl/src/BlackPearl/: Application.cpp  Application.h  Config.cpp  Config.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.cpp  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
app/src/main/cpp/BlackPearl/src/BlackPearl/AABB/: AABB.cpp  AABB.h
app/src/main/cpp/BlackPearl/src/BlackPearl/Animation/: AnimatedModel.cpp  Animation.cpp  Bone.cpp  KeyFrame.h
app/src/main/cpp/BlackPearl/src/BlackPearl/Common/: CommonFunc.h
app/src/main/cpp/BlackPearl/src/BlackPearl/Core/: CriticalSection.h  Memory.h  Platform.h  ScopeLock.h
app/src/main/cpp/BlackPearl/src/BlackPearl/Entity/: Entity.h
app/src/main/cpp/BlackPearl/src/BlackPearl/Event/: Event.h  MouseEvent.h
app/src/main/cpp/BlackPearl/src/BlackPearl/FileSystem/: FileSystem.cpp  FileSystem.h
app/src/main/cpp/BlackPearl/src/BlackPearl/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
app/src/main/cpp/BlackPearl/src/BlackPearl/LayerScene/: Layer.cpp  Layer.h  LayerManager.cpp
app/src/main/cpp/BlackPearl/src/BlackPearl/LightProbes/: LightProbes.h  SphericalHarmonics.cpp
app/src/main/cpp/BlackPearl/src/BlackPearl/Lumen/: Lumen.cpp  Lumen.h  LumenMeshCards.h  LumenRadiosity.cpp  LumenSceneData.cpp  LumenSceneData.h  LumenStruct.h
app/src/main/cpp/BlackPearl/src/BlackPearl/MainCamera/: MainCamera.cpp  MainCamera.h
app/src/main/cpp/BlackPearl/src/BlackPearl/Map/: Area.h  MapManager.h
app/src/main/cpp/BlackPearl/src/BlackPearl/Math/: Math.h  Quaternion.cpp  Quaternion.h  color.cpp  color.h  frustum.cpp  frustum.h  matrix.h  quat.h  vector.cpp  vector.h
app/src/main/cpp/BlackPearl/src/BlackPearl/Node/: BatchNode.cpp  BatchNode.h  InstanceNode.cpp  Node.h  SingleNode.cpp
app/src/main/cpp/BlackPearl/src/BlackPearl/Object/: Object.h
app/src/main/cpp/BlackPearl/src/BlackPearl/ObjectCreater/: ObjectCreater.cpp
app/src/main/cpp/BlackPearl/src/BlackPearl/ObjectManager/: ObjectManager.cpp  ObjectManager.h
app/src/main/cpp/BlackPearl/src/BlackPearl/RHI/: DynamicModule.h  DynamicRHI.cpp  DynamicRHI.h  PipelineStateCache.cpp  PipelineStateCache.h  RHIAccelStruct.h  RHIBindingLayoutDesc.cpp  RHIBindingLayoutDesc.h  RHIBindingSet.cpp  RHIBindingSet.h  RHIBoundShaderState.cpp  RHIBoundShaderState.h  RHIBuffer.cpp  RHIBuffer.h  RHICommandList.h  RHIDefinitions.cpp  RHIDefinitions.h  RHIDevice.cpp  RHIDevice.h  RHIDeviceContext.h  RHIFrameBuffer.cpp  RHIFrameBuffer.h  RHIGlobals.cpp  RHIGlobals.h  RHIHeap.cpp  RHIHeap.h  RHIInputLayout.h  RHIMessageCallback.h  RHIPipeline.h  RHIQuery.cpp  RHIQuery.h  RHIRayTraceStruct.h  RHISampler.cpp  RHISampler.h  RHIShader.h  RHIState.cpp  RHIState.h  RHITexture.cpp  RHITexture.h  RefCountPtr.h
app/src/main/cpp/BlackPearl/src/BlackPearl/RayTracing/: GenData.cpp  GenData_HV.cpp  GenData_HV.h  GenData_MV.cpp  GenData_MV.h  HitRst.h  Triangle.cpp  Triangle.h
app/src/main/cpp/BlackPearl/src/BlackPearl/Renderer/: CommonRenderPass.cpp  CommonRenderPass.h  Context.cpp  Context.h  CullingManager.cpp  DescriptorTableManager.cpp  DescriptorTableManager.h  DeviceManager.cpp  DeviceManager.h  DrawStrategy.h  ForwardRenderGraph.h  RenderCommand.h  RenderTargets.cpp  RenderTargets.h  Renderer.cpp  Renderer.h  (+4 more)
app/src/main/cpp/Pix/: GPU2-static-Cam.wpix  sandbox.rdc
app/src/main/cpp/SandBox/: Sandbox.exp  Sandbox.lib  Sandbox.vcxproj  Sandbox.vcxproj.filters  assimp-vc140-mt.lib  imgui.ini  premake5.lua
app/src/main/cpp/SandBox/assets/shaders/: PlaneBlinnPhong.glsl
app/src/main/cpp/SandBox/assets/shaders_hlsl/: Raytracing.hlsl  RaytracingCube.hlsl  RaytracingHelper.hlsli
app/src/main/cpp/SandBox/src/: SandBox.cpp
app/src/main/cpp/SandBox/src/Layers/: BatchRenderingLayer.h  CloudRenderLayer.h  CubeTestLayer.h  IBLRenderingLayer.h  IndirectDrawLayer.h  PbrRenderingLayer.h  RHIRenderGraphLayer.h  RayTracingLayer.h  TerrainRenderingLayer.h  VolumeLightLayer.h  VoxelConeTracingDeferredLayer.h  VoxelConeTracingSVOLayer.h  WaterRenderLayer.h
app/src/main/cpp/SandBoxAndriod/: CMakeLists.txt  SandBoxAndriod.vcxproj  premake5.lua
app/src/main/cpp/SandBoxAndriod/src/: SandBoxAndriod.cpp  SandBoxAndriod.h  native-lib.cpp
app/src/main/cpp/SandBoxDX/: Sandbox.vcxproj  SandboxDX.vcxproj  assimp-vc142-mtd.lib  packages.config
app/src/main/cpp/SandBoxDX/src/: SandBoxDX.cpp
app/src/main/cpp/SandBoxDX/src/Layers/: AdvanceLightTestLayer.h  D3D12BasicRenderLayer.h  D3D12RayTracingModelLayer.h
app/src/main/cpp/SandboxVK/: RT.rdc  SandboxVK.vcxproj  SandboxVK.vcxproj.filters  VkRHIRenderGraphLayer.h  premake5.lua  vulkan.hlsli
app/src/main/cpp/SandboxVK/assets/shaders/: shaders.cfg  vkBasic.frag
app/src/main/cpp/SandboxVK/src/Layers/: VkRHIRenderGraphLayer.h  VkTestLayer.h
app/src/main/cpp/ShaderCompiler/: CMakeLists.txt  ShaderCompiler.vcxproj  premake5.lua
app/src/main/cpp/ShaderCompiler/src/: options.h  shaderCompiler.cpp
app/src/main/cpp/cmake/: FindGLFW.cmake
app/src/main/cpp/native_render/: CMakeLists.txt  SandboxAndriodInf.cpp  SandboxAndriodInf.h
app/src/main/cpp/native_render/src/: native-lib.cpp
(+1364 files in other folders)
